[gd_scene load_steps=4 format=3 uid="uid://bm8x5q2n7kya"]

[ext_resource type="Script" uid="uid://beckpng1axc05" path="res://scripts/stations/GameMasterStation.gd" id="1_0x8vq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.05, 0.05, 0.15, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.6, 1, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.8, 1, 0.7)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="GameMasterStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8vq")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.02, 0.08, 1)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ConnectionStatus" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="StatusContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/ConnectionStatus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusTitle" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "GAME MASTER CONSOLE"
horizontal_alignment = 1

[node name="ServerStatus" type="Label" parent="MainContainer/LeftPanel/ConnectionStatus/StatusContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Server: DISCONNECTED"
horizontal_alignment = 1

[node name="ObjectSpawning" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SpawnContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/ObjectSpawning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnTitle" type="Label" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "OBJECT SPAWNING"

[node name="ObjectTypeOption" type="OptionButton" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="ObjectNameInput" type="LineEdit" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
placeholder_text = "Object Name"

[node name="PositionContainer" type="HBoxContainer" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer"]
layout_mode = 2

[node name="XInput" type="SpinBox" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50000.0
max_value = 50000.0
step = 10.0

[node name="YInput" type="SpinBox" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50000.0
max_value = 50000.0
step = 10.0

[node name="ZInput" type="SpinBox" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer/PositionContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -50000.0
max_value = 50000.0
step = 10.0
value = 1000.0

[node name="SpawnButton" type="Button" parent="MainContainer/LeftPanel/ObjectSpawning/SpawnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "SPAWN OBJECT"

[node name="MissionControl" type="Panel" parent="MainContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MissionContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/MissionControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="MissionTitle" type="Label" parent="MainContainer/LeftPanel/MissionControl/MissionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "MISSION CONTROL"

[node name="MissionSelect" type="OptionButton" parent="MainContainer/LeftPanel/MissionControl/MissionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")

[node name="MissionButtons" type="HBoxContainer" parent="MainContainer/LeftPanel/MissionControl/MissionContainer"]
layout_mode = 2

[node name="LoadMissionButton" type="Button" parent="MainContainer/LeftPanel/MissionControl/MissionContainer/MissionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Load"

[node name="StopMissionButton" type="Button" parent="MainContainer/LeftPanel/MissionControl/MissionContainer/MissionButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Stop"

[node name="MissionStatus" type="Label" parent="MainContainer/LeftPanel/MissionControl/MissionContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Status: No Mission Active"

[node name="MissionProgress" type="ProgressBar" parent="MainContainer/LeftPanel/MissionControl/MissionContainer"]
layout_mode = 2
show_percentage = false

[node name="UniverseControls" type="Panel" parent="MainContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="UniverseContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/UniverseControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="UniverseTitle" type="Label" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "UNIVERSE CONTROL"

[node name="TimeControlContainer" type="VBoxContainer" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/TimeControlContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Time Acceleration: 1.0x"

[node name="TimeSlider" type="HSlider" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/TimeControlContainer"]
layout_mode = 2
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="AlertControls" type="VBoxContainer" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer"]
layout_mode = 2

[node name="AlertLabel" type="Label" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/AlertControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "Alert Level Control"

[node name="AlertButtons" type="HBoxContainer" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/AlertControls"]
layout_mode = 2

[node name="GreenAlertButton" type="Button" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/AlertControls/AlertButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Green"

[node name="YellowAlertButton" type="Button" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/AlertControls/AlertButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Yellow"

[node name="RedAlertButton" type="Button" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/AlertControls/AlertButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Red"

[node name="EmergencyControls" type="VBoxContainer" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer"]
layout_mode = 2

[node name="EmergencyLabel" type="Label" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/EmergencyControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "Emergency Controls"

[node name="EmergencyButtons" type="HBoxContainer" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/EmergencyControls"]
layout_mode = 2

[node name="PauseButton" type="Button" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/EmergencyControls/EmergencyButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Pause"

[node name="ResetButton" type="Button" parent="MainContainer/LeftPanel/UniverseControls/UniverseContainer/EmergencyControls/EmergencyButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Reset"

[node name="CenterPanel" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UniverseMap" type="Panel" parent="MainContainer/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MapContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/UniverseMap"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapTitle" type="Label" parent="MainContainer/CenterPanel/UniverseMap/MapContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 16
text = "UNIVERSE OVERVIEW"
horizontal_alignment = 1

[node name="MapViewport" type="SubViewport" parent="MainContainer/CenterPanel/UniverseMap/MapContainer"]
render_target_update_mode = 4

[node name="MapCamera" type="Camera2D" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapViewport"]
zoom = Vector2(0.01, 0.01)

[node name="UniverseObjects2D" type="Node2D" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapViewport"]

[node name="MapControls" type="HBoxContainer" parent="MainContainer/CenterPanel/UniverseMap/MapContainer"]
layout_mode = 2

[node name="ZoomOutButton" type="Button" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom Out"

[node name="ZoomInButton" type="Button" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Zoom In"

[node name="CenterOnPlayerButton" type="Button" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapControls"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Center on Player Ship"

[node name="FollowPlayerToggle" type="CheckBox" parent="MainContainer/CenterPanel/UniverseMap/MapContainer/MapControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Follow"

[node name="LogPanel" type="Panel" parent="MainContainer/CenterPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="LogContainer" type="VBoxContainer" parent="MainContainer/CenterPanel/LogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="LogTitle" type="Label" parent="MainContainer/CenterPanel/LogPanel/LogContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "SYSTEM LOG"

[node name="LogScroll" type="ScrollContainer" parent="MainContainer/CenterPanel/LogPanel/LogContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LogText" type="RichTextLabel" parent="MainContainer/CenterPanel/LogPanel/LogContainer/LogScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "[color=green]Game Master Console Initialized[/color]"
scroll_following = true

[node name="LogControls" type="HBoxContainer" parent="MainContainer/CenterPanel/LogPanel/LogContainer"]
layout_mode = 2

[node name="ClearLogButton" type="Button" parent="MainContainer/CenterPanel/LogPanel/LogContainer/LogControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Clear Log"

[node name="SaveLogButton" type="Button" parent="MainContainer/CenterPanel/LogPanel/LogContainer/LogControls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Save Log"

[node name="RightPanel" type="VBoxContainer" parent="MainContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="ObjectInspector" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="InspectorContainer" type="VBoxContainer" parent="MainContainer/RightPanel/ObjectInspector"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="InspectorTitle" type="Label" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "OBJECT INSPECTOR"

[node name="SelectedObjectLabel" type="Label" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "No Object Selected"

[node name="ObjectPropertiesScroll" type="ScrollContainer" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ObjectPropertiesVBox" type="VBoxContainer" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer/ObjectPropertiesScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ObjectActions" type="HBoxContainer" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer"]
layout_mode = 2

[node name="ModifyButton" type="Button" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer/ObjectActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 0.8, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Modify"

[node name="DeleteButton" type="Button" parent="MainContainer/RightPanel/ObjectInspector/InspectorContainer/ObjectActions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Delete"

[node name="PlayerMetrics" type="Panel" parent="MainContainer/RightPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MetricsContainer" type="VBoxContainer" parent="MainContainer/RightPanel/PlayerMetrics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="MetricsTitle" type="Label" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "PLAYER METRICS"

[node name="MetricsScroll" type="ScrollContainer" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MetricsVBox" type="VBoxContainer" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer/MetricsScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShipStatusMetric" type="Label" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer/MetricsScroll/MetricsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Hull: 100% | Shield: 100% | Power: 100%"

[node name="PerformanceMetric" type="Label" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer/MetricsScroll/MetricsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Mission Score: 0 | Time Elapsed: 00:00"

[node name="StationStatusMetric" type="Label" parent="MainContainer/RightPanel/PlayerMetrics/MetricsContainer/MetricsScroll/MetricsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Stations Connected: 0"

[node name="QuickActions" type="Panel" parent="MainContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ActionsContainer" type="VBoxContainer" parent="MainContainer/RightPanel/QuickActions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionsTitle" type="Label" parent="MainContainer/RightPanel/QuickActions/ActionsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "QUICK ACTIONS"

[node name="ActionButtonsGrid" type="GridContainer" parent="MainContainer/RightPanel/QuickActions/ActionsContainer"]
layout_mode = 2
columns = 2

[node name="SpawnEnemyButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Spawn Enemy"

[node name="SpawnAllyButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.3, 1, 0.3, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Spawn Ally"

[node name="CreateAsteroidButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Add Asteroid"

[node name="CreateStationButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.4, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Add Station"

[node name="HealPlayerButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Heal Player"

[node name="DamagePlayerButton" type="Button" parent="MainContainer/RightPanel/QuickActions/ActionsContainer/ActionButtonsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "Damage Player"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_2")
theme_override_styles/normal = SubResource("StyleBoxFlat_1")
text = "← Main Menu"
